--- a/PAP/build.gradle
+++ b/PAP/build.gradle
@@ -1,24 +1,34 @@
 buildscript {
     repositories {
         jcenter()
+        google()
         maven {
             url 'https://maven.fabric.io/public'
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.google.gms:google-services:3.0.0'
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
 
         // Required for 'com.firebaseui:firebase-ui:1.1.1'
         maven {
             url 'https://maven.fabric.io/public'
+        }
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
         }
     }
 }
